# tasks

./: .gitignore  CMakeLists.txt  Store.cpp  User.cpp  User.pb.cc  User.pb.h  clean.sh  note.txt  notepad.cpp  project.proto  projectmanagement.pb.cc  projectmanagement.pb.h  projectmanagement.proto  run.sh  test_1.pb.cc  test_1.pb.h  test_1.proto  user  user.pb.cc  user.pb.h  user_add.cpp
include/: user.hpp  versions.hpp
includes/: fileoperations.hpp  project.hpp
modules/: defproject.cpp  fileOpr.cpp  fileOpr.hpp  fileoperations.cpp  project.hpp  user.h  user.hpp  versions.hpp
old.bck/: notepad.cpp  test.cpp  user_add.cpp
proto/: project.proto  user.proto  version.proto
protobufs/: project.pb.cc  project.pb.h  user.pb.cc  user.pb.h  version.pb.cc  version.pb.h
src/: defproject.cpp  fileoperations.cpp  notepad.cpp  user.cpp  version.cpp
temp/: User.pb.h  User.proto  new_user  note.txt  user  user.pb
